--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker build --build-arg TOKEN=$TOKEN -f $DOCKERFILE_PATH -t $IMAGE_NAME .
+docker build --build-arg AUTH_TOKEN=$TOKEN -f $DOCKERFILE_PATH -t $IMAGE_NAME .
